domain/src/com/example/domain/category/errors/CategoryIdError.java
package com.example.domain.category.errors;

public class CategoryIdError {
  public static final CategoryIdError INSTANCE = new CategoryIdError();
}
